Model使用Typecho数据结构

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionString": {
+    "Dev": "Server=(localdb)\\mssqllocaldb;Database=AdweiminBlogDB;Trusted_Connection=True;ConnectRetryCount=0"
+    //"Pro": "Server=localhost;Database=AdweiminBlogDB;Trusted_Connection=True;ConnectRetryCount=0",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
