--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Dev": "Server=(localdb)\\mssqllocaldb;Database=AdweiminCoreDbContext;Trusted_Connection=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
