--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Model">
-      <HintPath>..\Model\bin\Debug\netcoreapp2.1\Model.dll</HintPath>
-    </Reference>
-    <Reference Include="Persistence">
-      <HintPath>..\Persistence\bin\Debug\netcoreapp2.1\Persistence.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
 </Project>
