--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Dev": "Server=(localdb)\\mssqllocaldb;Database=AdweiminCoreDbContext;Trusted_Connection=True;"
-
+    "Dev": "Server=(localdb)\\mssqllocaldb;Database=AdweiminCoreDbContext;Trusted_Connection=True;",
+    //"Pro": "Data Source=WEIMIN;User ID=sa;Password=199216.com;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
