--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.20.0",
+    "antd": "^3.20.5",
     "babel-plugin-import": "^1.11.0",
+    "braft-editor": "^2.3.7",
     "customize-cra": "^0.2.12",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
